fix site container overflow & fix iframe height

--- a/css/main.css
+++ b/css/main.css
@@ -287,6 +287,7 @@ body {
 
 .site-container {
   background-color: azure;
+  overflow: hidden;
 }
 
 .container {
