--- a/sass/components/index/_site.scss
+++ b/sass/components/index/_site.scss
@@ -1,5 +1,6 @@
 .site-container {
   background-color: azure;
+  overflow: hidden;
 }
 .container {
   max-width: 90%;
